# SYCL-financial-derivatives

./: .gitignore  .gitmodules  CMakeLists.txt  GBM_cpu  GBM_cpusycl  LICENSE  Makefile  README.md  build.sh  compile_commands.json  imgui.ini  oneAPICodeMaven POC.pptx  training_data.csv
.cache/clangd/index/: AxisLabelSpecs.hpp.2AA10A17B5A8A4E4.idx  BorderSpecs.hpp.E31AE7BFF7DA7FA2.idx  Canvas.hpp.5751C4AD070CBF50.idx  ColumnIndex.hpp.5B1EC9D8EA080D44.idx  Constants.hpp.4CD5CE0524D23A5C.idx  Default.hpp.76A104D96369B28D.idx  DepthSpecsOf.hpp.1874A9E766152EA6.idx  DrawSpecs.hpp.BE3AFE67C171A8E4.idx  Enums.hpp.C55C7E5D4C4BEABE.idx  Figure.hpp.98FB9C447E77DCEC.idx  FillSpecsOf.hpp.EDF365F27B7F7A73.idx  FillStyleSpecs.hpp.9A942A2E16DB376D.idx  FilledCurvesSpecsOf.hpp.D4BA41F8213B2A5A.idx  FontSpecsOf.hpp.C6CCA02E104520DD.idx  FrameSpecsOf.hpp.2A8994C5D54B11E1.idx  GridSpecs.hpp.36448D2A3BB338AE.idx  GridSpecsBase.hpp.AEBDAF30CD91686C.idx  HistogramStyleSpecs.hpp.0060B31187117658.idx  LayoutSpecs.hpp.26402D11D40B1F18.idx  LegendSpecs.hpp.1DB4217918082FB6.idx  LineSpecsOf.hpp.A47B8190082D91A9.idx  OffsetSpecsOf.hpp.5B9CC6939828CF69.idx  Palettes.hpp.EE2D53CBE8C9A114.idx  Plot.hpp.C42FB4952290DDC1.idx  Plot2D.hpp.C1173BB480EE0F92.idx  Plot3D.hpp.3BE71A0C517EB8F0.idx  PointSpecsOf.hpp.1782A02314EF2094.idx  Shader.cpp.DAB7BD172CCBFC27.idx  Shader.h.DCC7BFFCC3960984.idx  ShowSpecsOf.hpp.ECAF377EC0E7C880.idx  Specs.hpp.181F492B65F27F17.idx  StringOrDouble.hpp.0FEB3559596A0B61.idx  TextSpecsOf.hpp.933B8A10985CEC2D.idx  TicsSpecs.hpp.56EAA6C4B91C606D.idx  TicsSpecsBaseOf.hpp.884A9149CC408D62.idx  Utils.hpp.2313B4A564ADD9D0.idx  (+36 more)
data/: .~lock.AAPL.csv#  .~lock.AMZN.csv#  AAPL.csv  AMZN.csv  MSFT.csv
src/: FontData.c  GBM.cpp  GBM.hpp  Shader.cpp  Shader.h  capm.hpp  glplot.cpp  glplot.cpp.orig  glplot.hpp  main.cpp  main.cpp.orig  main.hpp  main_cpu.cpp  main_cpu.cpp.orig  main_cpu.hpp  main_cpu_sycl.cpp  monthly_adjusted_IBM.csv  readdata.hpp  stockdata.hpp  stockdata.hpp.orig  window.cpp  window.cpp.orig  window.h
src/glad/: glad.c
src/shaders/: main.glsl
